// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RuleRow /> should render a row with a managed rule tab 1`] = `
<tr
  class="draggable row"
  data-id="1"
  id="1"
>
  <td
    class="smallest align-middle"
  >
    <i
      class="material-icons text-faded drag-handle dragHandle"
    >
      drag_indicator
    </i>
  </td>
  <td
    class="smallest align-middle position-relative"
  >
    <div>
      <label
        aria-checked="true"
        class="label label"
        for="toggle-button-5"
        role="switch"
      >
        <input
          checked=""
          class="input"
          disabled=""
          id="toggle-button-5"
          name="toggle-button-5"
          type="checkbox"
        />
        <div
          class="slider"
        />
      </label>
    </div>
    <div
      class="toggleActivation"
      id="toggle-data-1"
    />
  </td>
  <td
    class="link-full-td align-middle middleColumn"
    id="rule-name-1"
  >
    <a
      to="/app/settings/rules/1"
    >
      <div
        class="middleColumnContent"
      >
        <span
          class="name"
        >
          my rule
        </span>
      </div>
    </a>
  </td>
  <td
    class="link-full-td align-middle smallest pr-4"
  >
    <a
      to="/app/settings/rules/1"
    >
      <div
        class="text-faded"
      >
        01/01/2020
      </div>
    </a>
  </td>
  <td
    class="align-middle smallest actions"
  >
    <button
      aria-disabled="true"
      class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium isDisabled"
      title="Duplicate rule"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        file_copy
      </i>
    </button>
    <button
      aria-disabled="false"
      class="wrapper actionButton mr-1 wrapper ghost ghost destructive medium"
      id="delete-rule-1"
      title="Delete rule"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        delete
      </i>
    </button>
  </td>
</tr>
`;

exports[`<RuleRow /> should render a row with a rule 1`] = `
<tr
  class="draggable row"
  data-id="1"
  id="1"
>
  <td
    class="smallest align-middle"
  >
    <i
      class="material-icons text-faded drag-handle dragHandle"
    >
      drag_indicator
    </i>
  </td>
  <td
    class="smallest align-middle position-relative"
  >
    <div>
      <label
        aria-checked="true"
        class="label label"
        for="toggle-button-2"
        role="switch"
      >
        <input
          checked=""
          class="input"
          disabled=""
          id="toggle-button-2"
          name="toggle-button-2"
          type="checkbox"
        />
        <div
          class="slider"
        />
      </label>
    </div>
    <div
      class="toggleActivation"
      id="toggle-data-1"
    />
  </td>
  <td
    class="link-full-td align-middle middleColumn"
    id="rule-name-1"
  >
    <a
      to="/app/settings/rules/1"
    >
      <div
        class="middleColumnContent"
      >
        <span
          class="name"
        >
          my rule
        </span>
      </div>
    </a>
  </td>
  <td
    class="link-full-td align-middle smallest pr-4"
  >
    <a
      to="/app/settings/rules/1"
    >
      <div
        class="text-faded"
      >
        01/01/2020
      </div>
    </a>
  </td>
  <td
    class="align-middle smallest actions"
  >
    <button
      aria-disabled="false"
      class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium"
      title="Duplicate rule"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        file_copy
      </i>
    </button>
    <button
      aria-disabled="false"
      class="wrapper actionButton mr-1 wrapper ghost ghost destructive medium"
      id="delete-rule-1"
      title="Delete rule"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        delete
      </i>
    </button>
  </td>
</tr>
`;

exports[`<RuleRow /> should render a row with an error 1`] = `
<tr
  class="draggable row"
  data-id="1"
  id="1"
>
  <td
    class="smallest align-middle"
  >
    <i
      class="material-icons text-faded drag-handle dragHandle"
    >
      drag_indicator
    </i>
  </td>
  <td
    class="smallest align-middle position-relative"
  >
    <div>
      <label
        aria-checked="true"
        class="label label"
        for="toggle-button-8"
        role="switch"
      >
        <input
          checked=""
          class="input"
          disabled=""
          id="toggle-button-8"
          name="toggle-button-8"
          type="checkbox"
        />
        <div
          class="slider"
        />
      </label>
    </div>
    <div
      class="toggleActivation"
      id="toggle-data-1"
    />
  </td>
  <td
    class="link-full-td align-middle middleColumn"
    id="rule-name-1"
  >
    <a
      to="/app/settings/rules/1"
    >
      <div
        class="middleColumnContent"
      >
        <span
          class="name"
        >
          my rule
        </span>
        <span
          class="ml-2 error"
        >
          <span
            class="material-icons mr-1"
          >
            error_outline
          </span>
          No help center selected
        </span>
      </div>
    </a>
  </td>
  <td
    class="link-full-td align-middle smallest pr-4"
  >
    <a
      to="/app/settings/rules/1"
    >
      <div
        class="text-faded"
      >
        01/01/2020
      </div>
    </a>
  </td>
  <td
    class="align-middle smallest actions"
  >
    <button
      aria-disabled="true"
      class="wrapper actionButton mr-1 wrapper ghost ghost secondary medium isDisabled"
      title="Duplicate rule"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        file_copy
      </i>
    </button>
    <button
      aria-disabled="false"
      class="wrapper actionButton mr-1 wrapper ghost ghost destructive medium"
      id="delete-rule-1"
      title="Delete rule"
      type="button"
    >
      <i
        class="material-icons icon"
      >
        delete
      </i>
    </button>
  </td>
</tr>
`;
